sidebar working, button not

--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Main</title>
-    <!--style>
-      html,head,body { padding:0; margin:0; }
-      body { font-family: calibri, helvetica, arial, sans-serif; }
-    </style-->
-    <link rel="stylesheet" type="text/css" href="./css/semantic.min.css" />
-    <script type="text/javascript" src="./css/semantic.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js" integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./css/sidebar.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/sidebar.min.css" />
     <script type="text/javascript" src="/_reactor/debug.js"></script>
     <script type="text/javascript" src="elm.js"></script>
   </head>
