--- a/get_sealang_vocab/stock_photo_picker/index.html
+++ b/get_sealang_vocab/stock_photo_picker/index.html
@@ -12,7 +12,7 @@
         <div id="vocab-images"></div>
         <div><input type="text" id="more-images-query"><button type="button" id="more-images-loader">More Images</button></div>
         <div id="vocab-images-google"></div>
-        <div id="vocab-image-manual"></div>
+        <div id="vocab-image-manual"><input id="vocab-image-manual-input" type="text"></div>
         <div id="vocab-image-downloaded"></div>
         <div id="vocab-audio"></div>
         <div id="save-notifier"></div>
@@ -21,22 +21,9 @@
     </body>
     <script type="text/javascript">
       const renderer = require('./renderer');
-      renderer.run('./vocab.db');
+      window.onload = () => renderer.run('./vocab.db');
     </script>
     <style type="text/css">
-      .selector-square {
-        float: left;
-        width: 20px;
-        height: 20px;
-        margin: 5px;
-        border: 1px solid rgba(0, 0, 0, .2);
-        background: green;
-      }
-      /* making clicking it obvious */
-      /* TODO: probably means I should be using a proper button */
-      .selector-square:active {
-        border: 2px solid black;
-      }
       #next {
         float: center;
         margin: 5px;
